# actix_web_demo

./: Cargo.toml  Dockerfile  DockerfileDemo  Jenkinsfile  docker-compose.yml  docker-stack.yml
api_tool/: Cargo.toml
api_tool/src/: lib.rs
api_tool/src/api_tool/: mod.rs  tool.rs  tool_nation.rs
api_tool/src/api_tool/admin/: admin_info.rs
route_codegen/: Cargo.toml
route_codegen/src/: configure_builder.rs  lib.rs  tools.rs
src/: lib.rs  main.rs
src/api/: user.rs
src/handler/: agency.rs  mod.rs  nation.rs
src/handler/submodules/: mod.rs  oem.rs
