[package]
name = "route_codegen"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["parsing", "visit", "full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
toml = "0.9.0"
rayon = "1.10.0"
globset = "0.4.16"
prettyplease = "0.2.35"


[build-dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

